# pinn

./: .gitignore  MIGRATION.md  Makefile  README.md  compare_interactive.py  example_usage.py  pyproject.toml  setup.cfg  show_results_optimizers.ipynb  show_results_scheduler.ipynb  test_1d_compare_methods.py  test_1d_quick.py  train_interactive.py  visualize_1d_results.py  visualize_interactive.py
pinn/: __init__.py  plot_by_config.py  problems_definitions.py  run_training.py  show_configs.py  slope_limiters.py  training.py
pinn/core/: architectures.py  problems.py  residuals.py  training.py
pinn/experiments/: run_suite.py  tracker.py
pinn/plotters/: animate.py  plot_three_times.py
pinn/problems/: problems_1d.py  problems_2d.py
pinn/visualization/: visualizer.py
