[project]
name = "pinn"
version = "0.1.0"
description = ""
authors = [
    { name = "Breno Bertone", email = "bertonebreno@gmail.com" }
]
readme = "README.md"
requires-python = "=3.10.12"
dependencies = [
    "torch==2.7.1",
    "matplotlib==3.10.3",
    "plotly==6.2.0",
    "pyqt5 (>=5.15.11,<6.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
flake8 = "^7.3.0"
autoflake = "^2.3.1"
